--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
   <main>
   
   
-   <div id="side">
-      <div class="menu-icon">
+   <div id="side" >
+      <div class="menu-icon" id="showFilters">
         <img src="img/bars-solid.svg" alt="icono de menu">
       </div>
 
